--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>The Time Store - Luxury Timepieces</title>
     <meta name="description" content="Discover a curated collection of the world's most exceptional timepieces. Where engineering meets artistry in perfect harmony." />
     <meta name="author" content="The Time Store" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -13,11 +17,10 @@
     <meta property="og:title" content="The Time Store - Luxury Timepieces" />
     <meta property="og:description" content="Discover a curated collection of the world's most exceptional timepieces." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/preview.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/src/assets/preview.jpg" />
   </head>
 
   <body>
