Fix deployment issues: Add Vercel config, improve routing, optimize assets

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Time Store - Luxury Timepieces</title>
     <meta name="description" content="Discover a curated collection of the world's most exceptional timepieces. Where engineering meets artistry in perfect harmony." />
@@ -18,9 +19,13 @@
     <meta property="og:description" content="Discover a curated collection of the world's most exceptional timepieces." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/src/assets/preview.jpg" />
+    <meta property="og:url" content="https://thetimestore.vercel.app/" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/src/assets/preview.jpg" />
+    
+    <!-- Add base href for proper routing -->
+    <base href="/" />
   </head>
 
   <body>
